# avr_usb

./: .gitignore  .gitmodules  README.md  init.py  meson.build  meson_options.txt
include/: 32u4_usb.h  monoqueue.h  usb_base_descriptors.h  usb_cdc_descriptors.h  usb_data_link.h  usb_descriptors.h  usb_enumerate.h  usb_requests.h  usb_std.h
include/drivers/: uart.h
src/: 32u4_usb.c  main.c  monoqueue.c  uart.c  usb_descriptors.c  usb_std.c
template_files/avr_files/: avr_cross_properties.cfg
